@@ -28,18 +28,25 @@
         background-color: #fafafa;
         overflow-y: auto;
         width: 100%;
+        
         &::-webkit-scrollbar {
-            width: 5px;
-            height: 5px;
+            width: 10px;
+            height: 10px;
         }
         /* Track */
-        &::-webkit-scrollbar-track {}
+        &::-webkit-scrollbar-track {
+            background: #f7f7f7;
+        }
         /* Handle */
         &::-webkit-scrollbar-thumb {
-            background-color: #b71c1c;
+            background-color: #ccc;
+            border-radius: 10px;
+            transition: background-color ease .5s;
         }
         /* Handle on hover */
-        &::-webkit-scrollbar-thumb:hover {}
+        &::-webkit-scrollbar-thumb:hover {
+            background-color: #bbb;
+        }
         a {
             transition: none;
         }
@@ -117,11 +124,19 @@
                     padding: .2rem 0rem;
                 }
                 &::-webkit-scrollbar {
-                    width: 5px;
-                    height: 5px;
+                    width: 10px;
+                    height: 10px;
+                }
+                &::-webkit-scrollbar-track {
+                    background: #f7f7f7;
                 }
                 &::-webkit-scrollbar-thumb {
-                    background-color: #b71c1c;
+                    background-color: #ccc;
+                    border-radius: 10px;
+                    transition: background-color ease .5s;
+                }
+                &::-webkit-scrollbar-thumb:hover {
+                    background-color: #bbb;
                 }
                 &>li a {
                     display: inline-block;
