@@ -7,6 +7,7 @@
 - 2021-05-17                                -
 ---------------------------------------------
 .: WSM: Task - Improvement: Profile images for item (WSM-367)
+.: WSM: Task - Update scrollbar in store page (WSM-369)
 
 - v1.0.10921                                -
 ---------------------------------------------
